12703 - solve Accessibility obeservations and alignment issue - AB#13379 AB#12703

--- a/src/app/features/accessibility/accessibility.component.scss
+++ b/src/app/features/accessibility/accessibility.component.scss
@@ -28,3 +28,11 @@
       margin-bottom: 20px;
      }
 }
+
+h2.fss-Subheading{
+  font-size: 24px;
+}
+  .accessibilitySection ul {
+    margin: 0 0 0 3%;
+  }
+
